# ChangeLog for mail-filter/bmf
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.18 2012/06/08 11:37:58 phajdan.jr Exp $

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bmf-0.9.4-r2.ebuild:
  x86 stable wrt bug #419015

  07 Jun 2012; Brent Baude <ranger@gentoo.org> bmf-0.9.4-r2.ebuild:
  Marking bmf-0.9.4-r2 ppc for bug 419015

  27 Feb 2012; Eray Aslan <eras@gentoo.org> bmf-0.9.4-r2.ebuild:
  add missing die to configure - thanks to Samuli Suominen

  24 Feb 2012; Brent Baude <ranger@gentoo.org> bmf-0.9.4-r1.ebuild:
  Marking bmf-0.9.4-r1 ppc for bug 404775

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bmf-0.9.4-r1.ebuild:
  x86 stable wrt bug #404775

*bmf-0.9.4-r2 (24 Feb 2012)

  24 Feb 2012; Eray Aslan <eras@gentoo.org> +bmf-0.9.4-r2.ebuild,
  +files/bmf-0.9.4_QA.patch:
  Include correct mysql headers - bug #405481. Ifdef out unused code - QA.

*bmf-0.9.4-r1 (20 Nov 2011)

  20 Nov 2011; Eray Aslan <eras@gentoo.org> +bmf-0.9.4-r1.ebuild:
  Respect CFLAGS - bug #240780

  08 Jul 2010; Markos Chandras <hwoarang@gentoo.org> bmf-0.9.4.ebuild:
  Make it respect CC variable wrt bug #244138

  11 Jul 2009; Torsten Veller <tove@gentoo.org> bmf-0.9.4.ebuild:
  README.gz -> README (#272909)

  09 Dec 2007; Samuli Suominen <drac@gentoo.org> bmf-0.9.4.ebuild:
  ~amd64 wrt #189183

  18 Mar 2007; Marius Mauch <genone@gentoo.org> bmf-0.9.4.ebuild:
  Replacing einfo with elog

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> bmf-0.9.4.ebuild:
  dev-db/mysql => virtual/mysql

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org> bmf-0.9.4.ebuild:
  Stable on ppc.

  30 Nov 2004; Sven Wegener <swegener@gentoo.org> bmf-0.9.4.ebuild:
  Fixed invalid atoms in *DEPEND.

  05 Jun 2004; David Holm <dholm@gentoo.org> bmf-0.9.4.ebuild:
  Added to ~ppc.

*bmf-0.9.4 (03 Jun 2004)

  03 Jun 2004; Seemant Kulleen <seemant@gentoo.org> +metadata.xml,
  +bmf-0.9.4.ebuild: