@@ -1,17 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-AUX bmf-0.9.4_QA.patch 534 RMD160 8e1d2b8e0e8776cc615c824c4d3224d775a309af SHA1 cf0fd890fcb983912d4eeb03ac6a2ece1e1215ff SHA256 43d498deaa38868775aef5b05a8d5760a4603998a3a366dbe5ee67bb03d09196
-DIST bmf-0.9.4.tar.gz 36740 RMD160 3b8d73879d8e616d52d00bf838395ed7f6a7fc4d SHA1 d0b7ab253a531a533fefc6bc0691cc7af7ccea79 SHA256 7eed21802f95df2321ac4c958f99e14d2809852a5708700b633e1abb032c9ce1
-EBUILD bmf-0.9.4-r1.ebuild 1117 RMD160 bf5b5bf4bdbb57bb1fac84e517931bf8dfd6f2cd SHA1 a4522ccbbd61b8dbb0a130c2891fb1fff8a1b0ba SHA256 cee00cbedd227397b816b823b5c399d579ee36427baab4aa3fe0b15573f68cf9
-EBUILD bmf-0.9.4-r2.ebuild 1301 RMD160 7e0011779208f998b45eb22e5db37cc792c0ddcf SHA1 a2e45ce241a4a23d3512bc3ce2bdef7e0e1e54bf SHA256 325c34bba3ca4def1f92dc19153eb74f920fc87c48365df333ff20dcfab6fa32
-EBUILD bmf-0.9.4.ebuild 997 RMD160 9638ea524e62630e3a5bd4a387b2a412dec2485f SHA1 13e9dce6385e75f64131bfd5ba7b04e9466220b7 SHA256 5b043cef4d669c5bc0823797c4170dd334852bda16dee426f145b9a02994a5a6
-MISC ChangeLog 2195 RMD160 8cd2805de0957f370adf26c42bc144c842a5e230 SHA1 52fe86ddbe0d33ff645c54121c92ea406d67a88d SHA256 a2951c0014cf02d5bd9fc319086d7f528b835898181feb8c948a159228b7b845
-MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
+AUX bmf-0.9.4_QA.patch 534 SHA256 43d498deaa38868775aef5b05a8d5760a4603998a3a366dbe5ee67bb03d09196 SHA512 553607088051618cc88d0ccd7e74e644cfc6cc5a7e53f7e622ed1f2259cc49610c27c65613981f13ceb6173093e62c7e20326f4c2fb718bb6f3b2b2de011c2e9 WHIRLPOOL b7a203e25386f65410f785a22f0d2c6df506535b170dcca2242c02d63b622f86bb8152146323143a64759efcdf88100831cbc0d7a5300bc5a379784ee9e39d14
+DIST bmf-0.9.4.tar.gz 36740 SHA256 7eed21802f95df2321ac4c958f99e14d2809852a5708700b633e1abb032c9ce1
+EBUILD bmf-0.9.4-r2.ebuild 1301 SHA256 325c34bba3ca4def1f92dc19153eb74f920fc87c48365df333ff20dcfab6fa32 SHA512 c51f04620f7795730935a3afe32b593bfe6f8957d6a8739ffe5dc77b065443ae4a0299845990da44fd00db5ee2b348e210b6ee84e1d647e9196c9bed57c6760f WHIRLPOOL a4a6419e6fbcb337b8325044b4cabc165c606b5ae0b70adc683932f2058f69a0b1969b9d545aa399afa495aa18ac7d3d92b7cf765b096961820dc7fc74a95034
+MISC ChangeLog 2290 SHA256 f378406af21ba79bb2dbabd6cd73b36bb8d1daf2e733e15853ed7886ced8582f SHA512 ae745db452c1ac1959791cc0bd87cc9f4ecd04c3c798c9becebb9e8fb4ea8c0359342454f6fc6fdc6b80a33d947cb99420314f2247ff5da0aeea4d6bda77d5cf WHIRLPOOL ed5b1799ed3028dbf2a3658c3b36108ada8cfa8170871aef50278bb67402f0dbc5614774161e0d7c2b86fe2727a2f5c330704d9986c1bcd613a05b9d876b6ed6
+MISC metadata.xml 161 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 SHA512 77001eed8032a3b919c30d8dd9314951d3471528e770ef5ad840060e217037f5e1f0eb2cf4c5f90cb2d58e9598c8a38619a1301f890d6dd734900ab6273fb6ec WHIRLPOOL 0d251627fdbf63b5c090313d5bbf3e45acf630331742dc930a0136cc382b7720fe4099c64fd439fd31fe0eed48a4199d6e31692dbdedd34f803f9e2567d46975
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAk/R5BwACgkQuUQtlDBCeQI7+gCfTPgJ11kIerLWRzWHhAfK1WfV
-wGIAnjklQD70ccMFwyjPY+07AJcCSMPh
-=VJfe
+iQIcBAEBCAAGBQJRCScbAAoJEHfx8XVYajsfgHUP+waktp0I3QWAZ28Htwb+J8pu
+ra2qFHQfvuJ5HOdsg1f+VvhzMJjFuBA92lDhNO6oDx0gbfIfNS9aI2iso5MOw/Ks
+iG/Kvl4qqiVBnGhwD5fRZ+jmnJ5g+Gm4YSi9rzKrb3xMmRspwAHmb9Edsd5rJi+6
+FA+NY7WkOJCbaLMbUW1BRfzY53beE8RkWoPRsn48e8rTy9JMbRcOdVvUzqP4Yz1M
+7Vbb2Fo+YGoqC9jli4Xt1nJW1zj3QVjBsB29xr+pFg4IMi4kH1hCKmL90TMW4ppN
+2oJar5oe8tASAgZNdaZK68v6ap9hHLsKm2GZ4iIyvWymU0Q4VbvRs4ATnem6kc3w
+m8dMXKvbdKD+/tl+XmyNI0aueTgq+N7HKhNReU1nnbWtcuTrXxScEeBFnZ1T29sK
+4nHLwUByQlAU0pJGQH442LoIOyXUcxiGd3n7Oy1bJxNtnscSNX3yXfy/J827K+OQ
+mXWm8RLo3eDLwGhadKAu992pEkdSDaEMw7EGhhxKIxey/7+LtuJbTmKg9cwV7J3s
+xR5cqdRnrMAmkNnUbRDSy+haHu4dnp519GmniZ+Ot819DpUBENaL0ARyPUKXDJ9H
+rxRgW7LdaHE9+lg8Hr5jaeCwfZPbdwV71ge0v0ZQq3ui3d/dZPqo+u68r0ZRgO8E
+1gUTj32LE4iA77/c4mG2
+=Pwjg
 -----END PGP SIGNATURE-----
