@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/bmf
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.18 2012/06/08 11:37:58 phajdan.jr Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.19 2013/01/30 13:58:43 eras Exp $
+
+  30 Jan 2013; Eray Aslan <eras@gentoo.org> -bmf-0.9.4-r1.ebuild,
+  -bmf-0.9.4.ebuild:
+  Remove old
 
   08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> bmf-0.9.4-r2.ebuild:
   x86 stable wrt bug #419015
